chore: Added ESLint rule; added packages qs, dotenv, fast-xml-parser; added cache clear script

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "001-node",
   "version": "1.0.0",
   "scripts": {
-    "start": "node ./src/main.js"
+    "start": "node ./src/_app.js",
+    "clear-cache": "node ./src/lib/clearCache.js"
   },
   "keywords": [],
   "author": "",
@@ -10,7 +11,10 @@
   "description": "",
   "dependencies": {
     "axios": "^0.27.2",
+    "dotenv": "^16.0.0",
+    "fast-xml-parser": "^4.0.7",
     "jsdom": "^19.0.0",
+    "qs": "^6.10.3",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
