--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "node ./src/_app.js",
-    "clear-cache": "node ./src/lib/clearCache.js"
+    "clear-cache": "node ./src/lib/clearCache.js",
+    "stock": "node ./src/stockmarket.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "fast-xml-parser": "^4.0.7",
     "jsdom": "^19.0.0",
     "qs": "^6.10.3",
+    "typescript": "^4.7.4",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
