--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
     "fast-xml-parser": "^4.0.7",
     "jsdom": "^19.0.0",
