--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "description": "",
   "dependencies": {
     "axios": "^0.27.2",
-    "date-fns": "^2.28.0",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.0",
     "fast-xml-parser": "^4.0.7",
+    "fs": "^0.0.1-security",
     "jsdom": "^19.0.0",
     "qs": "^6.10.3",
     "typescript": "^4.7.4",
